--- a/src/main/resources/templates/dev/pdfbox/pdfBoxMerge.html
+++ b/src/main/resources/templates/dev/pdfbox/pdfBoxMerge.html
@@ -57,7 +57,7 @@
 		            </span>
 		            <span class="text btn-file">PDF Merge</span>
 		        </a>
-                <input id="fileName" type="text"/> 
+                <input id="fileName" type="hidden"/> 
 		    </div>
 		    <div class="card-body">파일목록</div>
 		</div>
@@ -67,7 +67,9 @@
 <th:block layout:fragment="pageScript">
     <script type="text/javascript">
     $(document).ready(function(){
-
+        var sss = "\"aaaa\"";
+    	
+    	console.log(sss);
         //다중파일 업로드 커스터마이징 참고 사이트 https://jsfiddle.net/alexjamesbrown/2nzL9f7g/
         $.fn.fileUploader = function (filesToUpload, sectionIdentifier) {
             var fileIdCounter = 0;
@@ -145,11 +147,13 @@
                 success: function (data) {
                     $("#fileName").val(data.pdfName);
                     $("#uploadBtn").hide();
-                    $("#downloadBtn").show();
+
                     filesUploader.clear();
                     var output = [];
-                    var downloadLink = "<a href='/pdfbox/pdfDownload/"+data.pdfName+"' class='btn btn-success btn-circle btn-sm'></a>";
-                    output.push("<li><strong>", data.pdfName, "</strong> &nbsp; &nbsp;", downloadLink, "</li> ");
+                    var downloadLink = "<a href='/pdfbox/pdfDownload/"+data.pdfName+"'>"+data.pdfName+"</a>";
+                    
+                    var removeLink = "<a href=\"#\" class=\"removePdf btn btn-danger btn-circle btn-sm\" data-fileid=\"" + data.pdfName + "\"><i class=\"fas fa-trash\"></i></a>";
+                    output.push("<li><strong>", downloadLink, "</strong> - ", " &nbsp; &nbsp; ", removeLink, "</li> ");
                     $(".card-body").append(output.join(""));
                 },
                 error: function (data) {
@@ -158,6 +162,32 @@
             });
         });
 
+        $(document).on("click",".removePdf", function (e) {
+        	e.preventDefault();
+        	var data = {pdfName:$("#fileName").val()};
+        	console.log(this);
+
+            $.ajax({
+                url: "/pdfbox/pdfDelete",
+                data: JSON.stringify(data),
+                cache : false,
+                processData: false,
+                contentType: "application/json; charset=utf-8;",
+                type: "POST",
+                dataType:"json",
+                success: function (data) {
+                	alert("정상적으로 삭제 되었습니다.");
+                	$(".card-body").empty();
+                	$("#uploadBtn").show();
+                },
+                error: function (data) {
+                    alert("ERROR - " + data.error);
+                    $(".card-body").empty();
+                    $("#uploadBtn").show();
+                }
+            });
+            
+        });
     });
 
     
