--- a/src/main/resources/templates/dev/chat/chat.html
+++ b/src/main/resources/templates/dev/chat/chat.html
@@ -5,16 +5,143 @@
 <head>
     <meta charset="UTF-8">
     <title>채팅 서비스</title>
-    <!-- Bootstrap core CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
- 
-    <!-- 부가적인 테마 -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"> -->
- 
-    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
- 
- 
+	<style>
+	  .container{max-width:1170px; margin:auto;}
+	img{ max-width:100%;}
+	.inbox_people {
+	  background: #f8f8f8 none repeat scroll 0 0;
+	  float: left;
+	  overflow: hidden;
+	  width: 40%; border-right:1px solid #c4c4c4;
+	}
+	.inbox_msg {
+	  border: 1px solid #c4c4c4;
+	  clear: both;
+	  overflow: hidden;
+	}
+	.top_spac{ margin: 20px 0 0;}
+	
+	
+	.recent_heading {float: left; width:40%;}
+	.srch_bar {
+	  display: inline-block;
+	  text-align: right;
+	  width: 60%; padding:
+	}
+	.headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
+	
+	.recent_heading h4 {
+	  color: #05728f;
+	  font-size: 21px;
+	  margin: auto;
+	}
+	.srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
+	.srch_bar .input-group-addon button {
+	  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+	  border: medium none;
+	  padding: 0;
+	  color: #707070;
+	  font-size: 18px;
+	}
+	.srch_bar .input-group-addon { margin: 0 0 0 -27px;}
+	
+	.chat_ib h5{ font-size:15px; color:#464646; margin:0 0 8px 0;}
+	.chat_ib h5 span{ font-size:13px; float:right;}
+	.chat_ib p{ font-size:14px; color:#989898; margin:auto}
+	.chat_img {
+	  float: left;
+	  width: 11%;
+	}
+	.chat_ib {
+	  float: left;
+	  padding: 0 0 0 15px;
+	  width: 88%;
+	}
+	
+	.chat_people{ overflow:hidden; clear:both;}
+	.chat_list {
+	  border-bottom: 1px solid #c4c4c4;
+	  margin: 0;
+	  padding: 18px 16px 10px;
+	}
+	.inbox_chat { height: 550px; overflow-y: scroll;}
+	
+	.active_chat{ background:#ebebeb;}
+	
+	.incoming_msg_img {
+	  display: inline-block;
+	  width: 6%;
+	}
+	.received_msg {
+	  display: inline-block;
+	  padding: 0 0 0 10px;
+	  vertical-align: top;
+	  width: 92%;
+	 }
+	 .received_withd_msg p {
+	  background: #ebebeb none repeat scroll 0 0;
+	  border-radius: 3px;
+	  color: #646464;
+	  font-size: 14px;
+	  margin: 0;
+	  padding: 5px 10px 5px 12px;
+	  width: 100%;
+	}
+	.time_date {
+	  color: #747474;
+	  display: block;
+	  font-size: 12px;
+	  margin: 8px 0 0;
+	}
+	.received_withd_msg { width: 57%;}
+	.mesgs {
+	  float: left;
+	  padding: 30px 15px 0 25px;
+	  width: 60%;
+	}
+	
+	 .sent_msg p {
+	  background: #05728f none repeat scroll 0 0;
+	  border-radius: 3px;
+	  font-size: 14px;
+	  margin: 0; color:#fff;
+	  padding: 5px 10px 5px 12px;
+	  width:100%;
+	}
+	.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+	.sent_msg {
+	  float: right;
+	  width: 46%;
+	}
+	.input_msg_write input {
+	  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+	  border: medium none;
+	  color: #4c4c4c;
+	  font-size: 15px;
+	  min-height: 48px;
+	  width: 100%;
+	}
+	
+	.type_msg {border-top: 1px solid #c4c4c4;position: relative;}
+	.msg_send_btn {
+	  background: #05728f none repeat scroll 0 0;
+	  border: medium none;
+	  border-radius: 50%;
+	  color: #fff;
+	  cursor: pointer;
+	  font-size: 17px;
+	  height: 33px;
+	  position: absolute;
+	  right: 0;
+	  top: 11px;
+	  width: 33px;
+	}
+	.messaging { padding: 0 0 50px 0;}
+	.msg_history {
+	  height: 516px;
+	  overflow-y: auto;
+	}
+	</style> 
 </head>
 <th:block layout:fragment="content">
     <!-- Begin Page Content -->
@@ -27,9 +154,63 @@
             </li>
             <li class="breadcrumb-item active">채팅</li>
         </ol>
-        
+            <input type="text" id="nickname" class="form-inline" placeholder="닉네임을 입력해주세요" required autofocus>
+            <button class = "btn btn-primary" id = "name">확인</button>
+            <label for="roomId" class="label label-default">방 번호</label>
+            <label th:text="*{room.roomId}" id="roomId" class="form-inline"></label>
+            <br>
+            <label for="roomName" class="label label-default">방 이름</label>
+            <label th:text="*{room.name}" id="roomName" class="form-inline"></label>
+        <div class="mesgs">
+          <div id = "chatroom" class="msg_history">
+<!--             <div class="incoming_msg">
+              <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>Test which is a new approach to have all
+                    solutions</p>
+                  <span class="time_date"> 11:01 AM    |    June 9</span></div>
+              </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Test which is a new approach to have all
+                  solutions</p>
+                <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+            </div>
+            <div class="incoming_msg">
+              <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>Test, which is a new approach to have</p>
+                  <span class="time_date"> 11:01 AM    |    Yesterday</span></div>
+              </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Apollo University, Delhi, India Test</p>
+                <span class="time_date"> 11:01 AM    |    Today</span> </div>
+            </div>
+            <div class="incoming_msg">
+              <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>We work directly with our designers and suppliers,
+                    and sell direct to you, which means quality, exclusive
+                    products, at a price anyone can afford.</p>
+                  <span class="time_date"> 11:01 AM    |    Today</span></div>
+              </div>
+            </div> -->
+          </div>
+          <div class="type_msg">
+            <div class="input_msg_write">
+              <input type="text" id="message" class="write_msg" placeholder="Type a message" />
+              <button class="msg_send_btn" type="button" id = "send"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            </div>
+          </div>
+        </div>
         <!-- Page Content -->
-        <div class="card shadow mb-4" id="files1">
+<!--         <div class="card shadow mb-4" id="files1">
 			<input type="text" id="nickname" class="form-inline" placeholder="닉네임을 입력해주세요" required autofocus>
 			<button class = "btn btn-primary" id = "name">확인</button>
 			<label for="roomId" class="label label-default">방 번호</label>
@@ -40,7 +221,7 @@
 			<div id = "chatroom" style = "width:400px; height: 600px; border:1px solid; background-color : gray"></div>
 			<input type = "text" id = "message" style = "height : 30px; width : 340px" placeholder="내용을 입력하세요" autofocus>
 			<button class = "btn btn-primary" id = "send">전송</button>
-        </div>
+        </div> -->
     </div>
 </th:block>
 
@@ -61,7 +242,7 @@
 	        send();
 	    })
 	    function connect(){
-	        webSocket = new WebSocket("ws://localhost:8080/ws/chat");
+	        webSocket = new WebSocket("ws://10.110.18.89:8080/ws/chat");
 	        webSocket.onopen = onOpen;
 	        webSocket.onclose = onClose;
 	        webSocket.onmessage = onMessage;
@@ -81,11 +262,18 @@
 	    function onMessage(e){
 	        data = e.data;
 	        chatroom = document.getElementById("chatroom");
-	        chatroom.innerHTML = chatroom.innerHTML + "<br>" + data;
+	        var msg = '<div class="incoming_msg"> <div class="received_msg"><div class="received_withd_msg">'+data+'<span class="time_date"></span></div></div></div>';
+
+	        chatroom.innerHTML = chatroom.innerHTML + "<br>" + msg;
+	        chatroom.scrollTop = chatroom.scrollHeight;
 	    }
 	    function onClose(){
 	        disconnect();
 	    }
+	    window.onbeforeunload = function(e){
+	        webSocket.send(JSON.stringify({type:'LEAVE',writer:nickname}));
+	        webSocket.close();
+	    };
         </script>
 
 </th:block>
