--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -34,8 +34,8 @@
         </a>
         <div id="devList" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">PDF BOX:</h6>
             <a class="collapse-item" href="/pdfbox/merge">PDF Merge</a>
+            <a class="collapse-item" href="/rooms">채팅</a>
 <!--             <a class="collapse-item" href="utilities-border.html">Borders</a>
             <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
